--- a/facebook_example/member/templates/example.html
+++ b/facebook_example/member/templates/example.html
@@ -295,13 +295,17 @@
                         <span class="thumbnail"><img src="{{ user.profile_or_self.image.url }}" title="local copy"/></span>
 
                      <form class="form col-md-12 center-block" method="post" action="savemobile">
+                     {% csrf_token %} 
                     {% if user.profile.email2  == None %}
                         <div class="input-group input-group-lg">
                           <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span> Email</span>
                           <input type="email" class="form-control" placeholder="Email" name="email2">
                         </div>
                     {% else %}
-                    Email : {{ user.profile.email2 }}
+                    <div class="input-group input-group-lg">
+                      <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span> Email</span>
+                      <input type="email" class="form-control" placeholder="Email" name="email2" value="{{ user.profile.email2 }}" disabled>
+                    </div>
                     {% endif %}
 
                     {% if  user.profile.mobilenumber  == None%}
@@ -310,8 +314,16 @@
                           <input type="text" class="form-control" placeholder="Mobile" name"mobilenumber">
                         </div>
                     {% else %}
-                    Mobile : {{ user.profile.mobilenumber }}
+                          <div class="input-group input-group-lg">
+                            <span class="input-group-addon"><span class="glyphicon glyphicon-phone"></span>Mobile</span>
+                            <input type="text" class="form-control" placeholder="Mobile" name"mobilenumber" value="{{ user.profile.mobilenumber }}" disabled>
+                          </div>
+
+                   
                     {% endif %}
+
+                    <button class="btn btn-primary btn-lg btn-block" type="submit" value="Submit">Save</button>
+                    </form>
 
                       </div>
                 </div>
