--- a/facebook_example/member/templates/example.html
+++ b/facebook_example/member/templates/example.html
@@ -294,7 +294,7 @@
                       <div class="panel-body">
                         <span class="thumbnail"><img src="{{ user.profile_or_self.image.url }}" title="local copy"/></span>
 
-                     <form class="form col-md-12 center-block" method="post" action="savemobile">
+                     <form class="form col-md-12 center-block" method="post" action="/savemobile/">
                      {% csrf_token %} 
                     {% if user.profile.email2  == None %}
                         <div class="input-group input-group-lg">
