--- a/facebook_example/member/templates/example.html
+++ b/facebook_example/member/templates/example.html
@@ -84,29 +84,26 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Brand</a>
+    <a class="navbar-brand" href="/"><img src="{{ STATIC_URL }}/img/logo2.png"></a>
+    <a class="navbar-brand" href="/">COCC Academy</a>
   </div>
   <div class="navbar-collapse collapse navbar-inverse-collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Active</a></li>
-      <li><a href="#">Link</a></li>
+      <li class="active"><a href="#">الرئيسية</a></li>
+      <li><a href="http://copticocc.org/site/">المركز الثقافى القبطى الأرثوذكسى</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
+          <li><a href="http://copticocc.org/site/?cat=48">أكاديمية مى سات</a></li>
           <li class="divider"></li>
-          <li class="dropdown-header">Dropdown header</li>
-          <li><a href="#">Separated link</a></li>
-          <li><a href="#">One more separated link</a></li>
+          <li><a href="http://copticocc.org/site/?cat=122">أكاديمية المركز</a></li>
         </ul>
       </li>
     </ul>
-    <form class="navbar-form navbar-left" _lpchecked="1">
+<!--     <form class="navbar-form navbar-left" _lpchecked="1">
       <input type="text" class="form-control col-lg-8" placeholder="Search">
-    </form>
-    <ul class="nav navbar-nav navbar-right">
+    </form> -->
+<!--     <ul class="nav navbar-nav navbar-right">
       <li><a href="#">Link</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -118,7 +115,7 @@
           <li><a href="#">Separated link</a></li>
         </ul>
       </li>
-    </ul>
+    </ul> -->
   </div>
 </div>
 </div>
@@ -312,7 +309,7 @@
                     {% if not user.profile.mobilenumber   %}
                         <div class="input-group input-group-lg">
                           <span class="input-group-addon"><span class="glyphicon glyphicon-phone"></span>Mobile</span>
-                          <input type="text" class="form-control" placeholder="Mobile" name"mobilenumber">
+                          <input type="text" class="form-control" placeholder="Mobile" name="mobilenumber">
                         </div>
                     {% else %}
                           <div class="input-group input-group-lg">
