--- a/facebook_example/member/templates/example.html
+++ b/facebook_example/member/templates/example.html
@@ -476,42 +476,35 @@
              {% include 'django_facebook/_facebook_js.html' %}
         </div>
 
+        </div>
 
 
         <div calss="col-md-12">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="thumbnail">
-                <div class="caption">
+              <div class="list-group-item">
+                <div class="list-group-item-heading">
                     <h3>الأنبا إرميا</h3>
-                    <div class="fb-like" data-href="https://www.facebook.com/BishopErmia" data-layout="standard" data-action="like" data-show-faces="true" data-share="true">
-                  </div>
+                    <p class="list-group-item-text"> <div class="fb-like" data-href="https://www.facebook.com/BishopErmia" data-layout="standard" data-action="like" data-show-faces="true" data-share="true">
+                  </div></p>
                 </div>
               </div>
-            </div>
 
-            <div class="col-md-4">
-              <div class="thumbnail">
-                <div class="caption">
+              <div class="list-group-item">
+                <div class="list-group-item-heading">
                     <h3>المركز الثقافى القبطى الأرثوذكسى</h3>
-                  <div class="fb-like" data-href="https://www.facebook.com/CopticOCC" data-layout="standard" data-action="like" data-show-faces="true" data-share="true">
-                  </div>
+                  <p class="list-group-item-text"> <div class="fb-like" data-href="https://www.facebook.com/CopticOCC" data-layout="standard" data-action="like" data-show-faces="true" data-share="true">
+                  </div></p>
                 </div>
-              </div>
-            </div>
 
-            <div class="col-md-4">
-              <div class="thumbnail">
-                <div class="caption">
+              <div class="list-group-item">
+                <div class="list-group-item-heading">
                     <h3>أكاديمية المركز</h3>
-                    <div class="fb-like" data-href="https://www.facebook.com/COCCAcademy" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+                    <p class="list-group-item-text"> <div class="fb-like" data-href="https://www.facebook.com/COCCAcademy" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div></p>
                 </div>
               </div>
-            </div>
-
-          </div> 
         </div>
-        
+        </div>
+
+
         <!-- script references -->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
         <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
