--- a/facebook_example/member/static/css/styles.css
+++ b/facebook_example/member/static/css/styles.css
@@ -1,1 +1,67 @@
-.modal-footer {   border-top: 0px; }
+
+        #footer {
+        height: 80px;
+      }
+      .error {
+        border: 1px solid red;
+        margin-top: 10px;
+        padding: 20px;
+      }
+      h2 {
+        line-height: 20px;
+        min-height: 20px;
+        padding-bottom: 2px;
+        vertical-align: bottom;
+        color: #1C2A47;
+        font-size: 16px;
+      }
+      a {
+        color: #3B5998;
+        cursor: pointer;
+        text-decoration: none;
+      }
+      .messages {
+        padding: 15px;
+        background-color: #cdc;
+        list-style: none;
+      }
+      #rounded-corner
+      {
+        font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+        font-size: 12px;
+        margin: 45px;
+        width: 480px;
+        text-align: left;
+        border-collapse: collapse;
+      }
+      #rounded-corner thead th
+      {
+        background: #b9c9fe;
+      }
+      #rounded-corner th
+      {
+        padding: 8px;
+        font-weight: normal;
+        font-size: 13px;
+        color: #039;
+        background: #b9c9fe;
+      }
+      #rounded-corner td
+      {
+        padding: 8px;
+        background: #e8edff;
+        border-top: 1px solid #fff;
+        color: #669;
+      }
+      #rounded-corner tfoot td.rounded-foot-left
+      {
+        background: #e8edff url('table-images/botleft.png') left bottom no-repeat;
+      }
+      #rounded-corner tfoot td.rounded-foot-right
+      {
+        background: #e8edff url('table-images/botright.png') right bottom no-repeat;
+      }
+      #rounded-corner tbody tr:hover td
+      {
+        background: #d0dafd;
+      }
