--- a/facebook_example/member/templates/example.html
+++ b/facebook_example/member/templates/example.html
@@ -50,7 +50,7 @@
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                Dropdown 
+                الأكاديمية 
                 <b class="caret">
                 </b>
               </a>
@@ -394,11 +394,12 @@ Learn more
                 Save
               </button>
             </form>
-            <a href="{% url 'auth_logout' %}?next={{ request.path|urlencode }}" class="btn btn-block btn-danger">
-              تسجيل خروج
-            </a>
+
             
           </div>
+          <a href="{% url 'auth_logout' %}?next={{ request.path|urlencode }}" class="btn btn-block btn-danger">
+            تسجيل خروج
+          </a>
         </div>
         
 
