--- a/facebook_example/member/templates/example.html
+++ b/facebook_example/member/templates/example.html
@@ -151,6 +151,30 @@
                 
                 <span class="glyphicon glyphicon-briefcase">
                 </span>
+
+                ورشة عمل تصميم مواقع HTML +  CSS + BootStrap
+                مجاني -المركز الثقافى القبطى الارثوذكسى
+
+                2-التدريب عبارة عن:_
+                طريقه جديده فى التفكير فى التعليم فى الشغل 
+                التدريب مش للناس اللى عايزة شهادات قد ما هو للناس اللى عايزة العلم والخبرة
+
+                4-الحاجة الوحيد الاكيدة ان بعد التدريب ، لو اتطلب منك موقع او تاسكاية معينة حتى لو عمرك ما عملتها ابل كدة ، هاتعرف تنجزها فى اسرع وقت ممكن   - كل البرامج و الToolو المواقع الي استخدمناها هتلاقيها علي الStudent Portal 
+
+                5-بنهاية التدريب هيبقي فية مسابقة علشان تطبق الي اتعلمتو 
+                اول 5 هيخدو دومين بأسمهم يحطو علية الموقع الي هيعملو ( www.Name.com )
+
+                6-اتنين هياخدوا بعد التدريب ده 2 تدريب برمجة مجاناً و هنساعدهم يقدمو في شركة  ويشتغلوا ديفلوبرز 
+
+                7-الكورس بيتم فيه نشر فلسفة البرمجيات مفتوحة المصدر
+                واللى بيتم التدريب فيه بشكل غير مباشر على اعادة النظر فى العادات والتقاليد العقيمة ، التفكير ، التحليل ، البحث عن معلومات ، الصبر ، التحدى ، تغيير مفاهيم مغلوطة كتير عن التعليم وعن حاجات كتير فى حياتنا ويومنا العادى ، وحاجات تانية كتير (Open IT)
+
+                8-الكورس حوالى 18 ساعة ، علي 3 ايام من الاربعاء 22/10/21014 الي الجمعة 24 من 4 الي 9
+
+                ** نظرا لطلب بعض الطلبة التأجيل لانشغالهم الخميس و الجمعة يمكن الاتفاق علي معاد مناسب يوم الاربعاء
+                 
+                
+
               </div>
             </div>
             <div class="panel panel-primary">
