--- a/facebook_example/member/templates/example.html
+++ b/facebook_example/member/templates/example.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>
-      Connect with Facebook
+      المركز الثقافى القبطى الأرثوذكسى - Students Developemnt COCC
     </title>
     
     <link href="{{ STATIC_URL }}css/arabicfont.css" rel="stylesheet">
