--- a/facebook_example/member/templates/example.html
+++ b/facebook_example/member/templates/example.html
@@ -151,25 +151,32 @@
                 
                 <span class="glyphicon glyphicon-briefcase">
                 </span>
+<br>
 
                 ورشة عمل تصميم مواقع HTML +  CSS + BootStrap
                 مجاني -المركز الثقافى القبطى الارثوذكسى
-
+<br>
                 2-التدريب عبارة عن:_
                 طريقه جديده فى التفكير فى التعليم فى الشغل 
                 التدريب مش للناس اللى عايزة شهادات قد ما هو للناس اللى عايزة العلم والخبرة
+<br>
 
                 4-الحاجة الوحيد الاكيدة ان بعد التدريب ، لو اتطلب منك موقع او تاسكاية معينة حتى لو عمرك ما عملتها ابل كدة ، هاتعرف تنجزها فى اسرع وقت ممكن   - كل البرامج و الToolو المواقع الي استخدمناها هتلاقيها علي الStudent Portal 
+<br>
 
                 5-بنهاية التدريب هيبقي فية مسابقة علشان تطبق الي اتعلمتو 
                 اول 5 هيخدو دومين بأسمهم يحطو علية الموقع الي هيعملو ( www.Name.com )
+<br>
 
                 6-اتنين هياخدوا بعد التدريب ده 2 تدريب برمجة مجاناً و هنساعدهم يقدمو في شركة  ويشتغلوا ديفلوبرز 
+<br>
 
                 7-الكورس بيتم فيه نشر فلسفة البرمجيات مفتوحة المصدر
                 واللى بيتم التدريب فيه بشكل غير مباشر على اعادة النظر فى العادات والتقاليد العقيمة ، التفكير ، التحليل ، البحث عن معلومات ، الصبر ، التحدى ، تغيير مفاهيم مغلوطة كتير عن التعليم وعن حاجات كتير فى حياتنا ويومنا العادى ، وحاجات تانية كتير (Open IT)
+<br>
 
                 8-الكورس حوالى 18 ساعة ، علي 3 ايام من الاربعاء 22/10/21014 الي الجمعة 24 من 4 الي 9
+<br>
 
                 ** نظرا لطلب بعض الطلبة التأجيل لانشغالهم الخميس و الجمعة يمكن الاتفاق علي معاد مناسب يوم الاربعاء
                  
@@ -285,6 +292,42 @@ Learn more
         
       </div>
       </div>
+            <div class="panel panel-primary">
+              <div class="panel-heading">
+                <h3 class="panel-title">
+                  Python Game Developemnt
+                </h3>
+              </div>
+              <div class="panel-body">
+                Coming Soon
+                <!-- 
+      <p>
+      <a class="btn btn-primary btn-lg">
+      Learn more
+      </a>
+      </p>
+      -->
+              
+            </div>
+            </div>
+                  <div class="panel panel-success">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">
+                        E-Business Developemnt & Innovation
+                      </h3>
+                    </div>
+                    <div class="panel-body">
+                      Coming Soon
+                      <!-- 
+            <p>
+            <a class="btn btn-primary btn-lg">
+            Learn more
+            </a>
+            </p>
+            -->
+                    
+                  </div>
+                  </div>
   </div>
   
   <div class="content col-md-6" style="margin-top: 10px;">
@@ -442,11 +485,11 @@ Learn more
         <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">
-                أكاديمية المركز
+                <a href="https://www.facebook.com/COCCAcademy">أكاديمية المركز</a>
               </h3>
             </div>
             <div class="panel-body">
-            <img src="{{ STATIC_URL }}img/cocc.jpg" alt="COCC" class="img-thumbnail" style="width: 140px;float:right;">
+            <a href="https://www.facebook.com/COCCAcademy"><img src="{{ STATIC_URL }}img/cocc.jpg" alt="COCC" class="img-thumbnail" style="width: 140px;float:right;"></a>
 
               <div class="fb-like" data-href="https://www.facebook.com/COCCAcademy" data-layout="standard" data-action="like" data-show-faces="true" data-width="300" data-share="true">
               </div>
@@ -456,11 +499,11 @@ Learn more
           <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">
-                 المركز الثقافى القبطى الأرثوذكسى
+                 <a href="https://www.facebook.com/CopticOCC">المركز الثقافى القبطى الأرثوذكسى</a>
               </h3>
             </div>
             <div class="panel-body">
-            <img src="{{ STATIC_URL }}img/cocc3.jpg" alt="COCC" class="img-thumbnail" style="width: 140px;">
+            <a href="https://www.facebook.com/CopticOCC"><img src="{{ STATIC_URL }}img/cocc3.jpg" alt="COCC" class="img-thumbnail" style="width: 140px;"></a>
               <div class="fb-like" data-href="https://www.facebook.com/CopticOCC" data-layout="standard" data-action="like" data-show-faces="true" data-width="300" data-share="true">
               </div>
             </div>
@@ -469,11 +512,11 @@ Learn more
           <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">
-                  الأنبا إرميا
+                 <a href="https://www.facebook.com/BishopErmia">الأنبا إرميا</a>
               </h3>
             </div>
             <div class="panel-body">
-            <img src="{{ STATIC_URL }}img/anba.jpg" alt="COCC" class="img-thumbnail" style="width: 140px;">
+            <a href="https://www.facebook.com/BishopErmia"><img src="{{ STATIC_URL }}img/anba.jpg" alt="COCC" class="img-thumbnail" style="width: 140px;"></a>
               <div class="fb-like" data-href="https://www.facebook.com/BishopErmia" data-layout="standard" data-action="like" data-show-faces="true" data-width="300" data-share="true">
               </div>
             </div>
